--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
       <div class="skill-wrap clearfix">
         <div class="center wow fadeInDown">
           <h2 style="margin-bottom: 0.2em;">Damian <span>Płóciennik</span></h2>
-          we współpracy z <h3 style="display:inline; font-size:">Klaudią <span>Fil</span></h3>
+          we współpracy z <h3 style="display:inline;">Klaudią <span>Fil</span></h3>
           <p class="lead" style="margin-top: 1em;">
             Strona została zrealizowana w ramach przedmiotu Programowanie Niskopoziomowe realizowanego na kierunku Informatyka Stosowana na Wydziale Fizyki i Informatyki Stosowanej Akademii Górniczo-Hutniczej im. Stanisława Staszica w Krakowie.
           </p>
         </div>
         </div>
+      </div>
     <!--/.container-->
   </section>
 
