Changed lab description

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <div class="container">
       <div class="skill-wrap clearfix">
         <div class="center wow fadeInDown">
-          <h2 style="margin-bottom: 0.2em;">Damian <span>Płóciennik</span></h2>
-          we współpracy z <h3 style="display:inline;">Klaudią <span>Fil</span></h3>
+          <h2 style="margin-bottom: 0.2em;">Klaudia <span>Fil</span></h2>
+          <h2 style="margin-top: 0.2em;">Damian <span>Płóciennik</span></h2>
           <p class="lead" style="margin-top: 1em;">
             Strona została zrealizowana w ramach przedmiotu Programowanie Niskopoziomowe realizowanego na kierunku Informatyka Stosowana na Wydziale Fizyki i Informatyki Stosowanej Akademii Górniczo-Hutniczej im. Stanisława Staszica w Krakowie.
           </p>
