--- a/presentation.html
+++ b/presentation.html
@@ -69,10 +69,9 @@
             <li>Zmienne i stałe (Klaudia)</li>
             <li>Operatory arytmetyczne (Damian)</li>
             <li>Instrukcje logiczne (Klaudia)</li>
-            <li>Instrukcje logiczne (Klaudia)</li>
             <li>Skoki warunkowe i bezwarunkowe. Pętle. (Damian)</li>
             <li>Łańcuchy znaków (Klaudia)</li>
-            <li>Tablice (Damian)</li>
+            <li>Tablice (Klaudia)</li>
             <li>Procedury (Klaudia)</li>
             <li>Konwencje wołania. (Damian)</li>
             <li>Makra (Klaudia)</li>
