--- a/presentation.html
+++ b/presentation.html
@@ -35,6 +35,8 @@
                         <span class="icon-bar"></span>
                     </button>
           <a class="navbar-brand" href="index.html">Assembler x86-64</a>
+          <br />
+          <h3 style="display: block; margin-top: 2em; color: rgb(160, 160, 160);">Klaudia Fil, Damian Płóciennik, śr. 9.40, czw. 9.40</h3>
         </div>
 
         <div class="collapse navbar-collapse navbar-right">
