Add presentation movie

--- a/presentation.html
+++ b/presentation.html
@@ -80,6 +80,9 @@
             <li>Godbolt.org (Damian)</li>
           </ol>
           </p>
+          <br />
+          <h2>Seminarium</h2>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/NW8NP7TxnLI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         </div>
     <!--/.container-->
