--- a/laboratory.html
+++ b/laboratory.html
@@ -109,8 +109,7 @@
           <p class="lead">
             <ol>
               <li>Napisz program w Assembly x86-64, który spyta się o imię i przywita z Tobą. - <span style="font-weight: bold;">Klaudia</span></li>
-              <li>Napisz program w Assembly x86-64, który sprawdza, czy dana liczba (może być umieszczona w kodzie) jest liczbą pierwszą. -  <span style="font-weight: bold;">Klaudia</span></li>
-              <li>(dodatkowe) Napisz program Assembly x86-64, który wypisze wszystkie dzielniki danej liczby (liczba może być umieszczona w kodzie). -  <span style="font-weight: bold;">Klaudia</span></li>
+              <li>Napisz program w Assembly x86-64, który sprawdza, czy dana liczba (może być umieszczona w kodzie) jest liczbą pierwszą. Zakładając output: 31 jest liczba pierwsza (problemem w tym zadaniu może być wypisanie liczby, można sobie pomóc tworząc funkcję wypisującą jedną cyfrę i zadbać o wyświetlenie w odpowiedniej kolejności; wykorzystać stos). -  <span style="font-weight: bold;">Klaudia</span></li>
               <br /><li>Zaimplementuj algorytm wyszukiwania binarnego uzupełniając funkcję find w <a href="src/find.asm">załączonym pliku</a>. Funkcja powinna mieć możliwość wywołania z poziomu języka C, zgodnie z konwencją wywołań specyficzną dla architektury AMD64 (parametry są przekazywane kolejno w rejestrach: RDI, RSI, RDX, RCX, R8, R9 a następnie na stosie; wartość zwracana: w rejestrze RAX). Kod testujący poprawne wykonane ćwiczenia znajduje się <a href="src/test_find.c">tutaj</a>. -  <span style="font-weight: bold;">Damian</li>
               <li>Napisz funkcję odwracającą kolejność elementów w tablicy z wykorzystaniem wstawek asemblerowych w języku C++. Następnie napisz drugą funkcję robiącą to samo w&nbsp;pełni w&nbsp;języku C++. Zmierz i porównaj czasy wykonywaniu obu funkcji. Sprawdź rezultaty dla różnych poziomów optymalizacji. -  <span style="font-weight: bold;">Damian</li>
             </ol>
